--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -3,7 +3,7 @@
         <div class="row">
             {{#each products}}
             <div class="col-md-6 col-lg-4 col-xl-3">
-                <div class="card" style="width: 17rem;">
+                <div class="card bg-secondary" style="width: 17rem;">
                     <img class="card-img-top" src="/images/product-images/{{this._id}}.png" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">{{this.Name}}</h5>
