--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -13,7 +13,7 @@
             </li>
             {{#if user}}
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Orders</a>
+                <a class="nav-link disabled" href="/orders">Orders</a>
             </li>
             {{/if}}
         </ul>
@@ -36,4 +36,3 @@
         </div>
     </div>
 </nav>
-
