--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,5 +1,5 @@
 <div class="custom-container">
-    <div class="jumbotron">
+    <div class="jumbotron bg-secondary">
         <h3 class="text-center text-primary">Registration Form</h3>
         <br>
         {{!-- Display errors --}}
